@@ -10,6 +10,7 @@ ChangeLog
    * (WIP) defragment
    * (WIP) cache to disk
    * added class const support for __FILE__ __DIR__
+   * closes #337: adds warning about Zend OPcache optimization level incompatiblity
  * disassembler, decompiler:
    * PHP_5_6 support
  * misc:
